Add overlay + grass eating

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 
 </head>
 <body>
+	<div id="overlay">
+	<h2>Informations</h2>
+	<p id="pos_x"></p>
+	<p id="pos_z"></p>
+	<p id="eating"></p>
+	<p id="target"></p>
+	<p id="others"></p>
+	</div>
 	<script src="lib/three.min.js"></script>
 	<script src="lib/MTLLoader.js"></script>
 	<script src="lib/OBJLoader.js"></script>
